Fix a couple of variable errors

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -75,7 +75,7 @@
         "DiskSize": {
             "Default": "", 
             "Description": "The size of the storage disk", 
-            "Type": "Integer"
+            "Type": "String"
         }, 
         "Debug": {
             "Default": "", 
