Create a wildcard cert

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -416,7 +416,7 @@
                                     ] ] }, 
                                     "        \"certificate\": {",
                                     { "Fn::Join": [ "", [
-                                        "            \"common_name\": \"", { "Ref": "ZoneName" }, "\""
+                                        "            \"common_name\": \"*.", { "Ref": "ZoneName" }, "\""
                                     ] ] }, 
                                     "        }",
                                     "    }",
